# serper_ollama_crewai

./: README.md  _git.bat  _notes.txt  _ollama.bat  pyproject.toml
.github/workflows/: ci.yml
serper_ollama_crewai/: main.py
