[tool.poetry]
name = "serper-ollama-crewai"
version = "0.1.0"
description = ""
authors = ["DG Costa <costadiegus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
crewai = "^0.41.1"
crewai-tools = "^0.4.26"
langchain-ollama = "^0.1.2"
langchain-openai = "^0.1.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
